Fixed unreadable tiny text in circles

--- a/pyohio/static/css/styles.css
+++ b/pyohio/static/css/styles.css
@@ -275,6 +275,7 @@ a:hover {
     width: 30px;
 }
 .circle p {
+    color: #ffcb05;
     font-size: 10pt;
     font-weight: 400;
     line-height: 1.6em;
@@ -602,7 +603,6 @@ body.sponsorships .media p {
         font-weight:400;
         line-height: 1.4em;
         margin-top: -10px;
-        color: #bb0000;
     }
 }
 
